--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 PORT = 8080
 DEV_MODE - development
-MONGO_URL = 'mongodb://127.0.0.1:27017/DoctorApp'
+# MONGO_URL = 'mongodb://127.0.0.1:27017/DoctorApp'
+MONGO_URL = 'mongodb+srv://mantukr5242:DmyFc3gtaZPUp9du@cluster0.y32sqsn.mongodb.net/DoctorApp'
 # await mongoose.connect('mongodb://127.0.0.1:27017/DoctorApp',{useNewUrlParser: true });
 JWT_SECRET = XYZGHS123
+
+
+# DmyFc3gtaZPUp9du
